--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,3 +1,13 @@
+$bp-large: 78.15em; // 1250px
+$bp-medium: 69.4em; // 980px
+$bp-medium-small: 50em; // 800px
+$bp-small: 37.5em; // 600px
+$bp-smallest: 31.25em; // 500px
+
+// @media only screen and (max-width: $bp-medium) {
+//   font-size: 50%;
+// }
+
 .grid {
   width: 110rem;
   height: 90rem;
@@ -10,6 +20,15 @@
   border-radius: 1rem;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    width: 100vw;
+  }
+  @media only screen and (max-width: 53.1rem) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 10rem auto 1fr;
+    overflow: scroll;
+  }
 
   .top {
     width: 100%;
@@ -30,6 +49,11 @@
       align-items: center;
       justify-content: center;
       gap: 2rem;
+
+      @media only screen and (max-width: 43.75em) {
+        margin-left: 3rem;
+        width: max-content;
+      }
 
       img {
         width: 4rem;
@@ -84,9 +108,19 @@
 
     display: grid;
     grid-template-rows: 7rem 1fr 7rem;
+
+    @media only screen and (max-width: 53.1rem) {
+      height: fit-content;
+      width: 100%;
+    }
   }
 
   .right-side {
     grid-row: 2 /3;
+
+    @media only screen and (max-width: 53.1rem) {
+      grid-row: 3/4;
+      width: 100%;
+    }
   }
 }
