--- a/src/scss/CarDetail.scss
+++ b/src/scss/CarDetail.scss
@@ -31,6 +31,10 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+
+        @media only screen and (max-width: 31.25rem) {
+          object-fit: contain;
+        }
       }
     }
 
@@ -152,9 +156,17 @@
 
       .name {
         width: 20%;
+
+        @media only screen and (max-width: 69.4rem) {
+          width: 30%;
+        }
       }
       .comment {
         width: 40%;
+
+        @media only screen and (max-width: 69.4rem) {
+          width: 50%;
+        }
       }
       button {
         padding: 0.5rem 1rem;
@@ -184,3 +196,7 @@
   gap: 0.5rem;
   padding: 0.5rem 1rem;
 }
+
+// .started-message {
+//   width: 100%;
+// }
