--- a/src/scss/CarItem.scss
+++ b/src/scss/CarItem.scss
@@ -11,6 +11,14 @@
   cursor: pointer;
   transition: all 0.4s;
 
+  @media only screen and (max-width: 53.1rem) {
+    width: 70%;
+  }
+
+  @media only screen and (max-width: 35rem) {
+    width: 100%;
+  }
+
   &:hover {
     background: linear-gradient(147deg, #ffe53b 0%, #ff2525 74%);
   }
