--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -15,7 +15,8 @@ $bp-smallest: 31.25em; // 500px
   background-color: #fff;
   border-radius: 1rem;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  // grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 10rem 1fr;
   border-radius: 1rem;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
@@ -30,97 +31,101 @@ $bp-smallest: 31.25em; // 500px
     overflow: scroll;
   }
 
-  .top {
-    width: 100%;
-    grid-row: 1 /2;
-    grid-column: 1 / -1;
+  // .top {
+  //   width: 100%;
+  //   grid-row: 1 /2;
+  //   grid-column: 1 / -1;
 
-    // background: linear-gradient(90deg, #7debf2, #60a4ff);
-    // background-image: linear-gradient(135deg, #42d9fe 0%, #490bda 100%);
-    background-color: #ffe53b;
-    background-image: linear-gradient(147deg, #ffe53b 0%, #ff2525 74%);
+  //   // background: linear-gradient(90deg, #7debf2, #60a4ff);
+  //   // background-image: linear-gradient(135deg, #42d9fe 0%, #490bda 100%);
+  //   background-color: #ffe53b;
+  //   background-image: linear-gradient(147deg, #ffe53b 0%, #ff2525 74%);
 
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 2fr;
+  //   display: grid;
+  //   align-items: center;
+  //   grid-template-columns: 1fr 2fr;
 
-    .logo-box {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 2rem;
+  //   .logo-box {
+  //     display: flex;
+  //     align-items: center;
+  //     justify-content: center;
+  //     gap: 2rem;
 
-      @media only screen and (max-width: 43.75em) {
-        margin-left: 3rem;
-        width: max-content;
-      }
+  //     @media only screen and (max-width: 43.75em) {
+  //       margin-left: 3rem;
+  //       width: max-content;
+  //     }
 
-      img {
-        width: 4rem;
-        height: 4rem;
-      }
+  //     img {
+  //       width: 4rem;
+  //       height: 4rem;
+  //     }
 
-      h1 {
-        font-family: "Dancing Script", cursive;
-        font-weight: 700;
-      }
-    }
-    .bookmarks-box {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      padding: 2rem;
+  //     h1 {
+  //       font-family: "Dancing Script", cursive;
+  //       font-weight: 700;
+  //     }
+  //   }
+  // .bookmarks-box {
+  //   display: flex;
+  //   justify-content: flex-end;
+  //   align-items: center;
+  //   padding: 2rem;
 
-      position: relative;
-      .bookmarks-btn {
-        padding: 1rem;
-        border-radius: 0.5rem;
-        border: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 0.5rem;
-        font-size: 1.2rem;
-        font-weight: 600;
-        background-color: #fff;
-        cursor: pointer;
-      }
-      .notification {
-        position: absolute;
-        top: -5px;
-        right: 9px;
-        background-color: #ffe09b;
-        height: 2.5rem;
-        width: 2.5rem;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        color: #000;
-        font-weight: 600;
-      }
-    }
-  }
+  //   position: relative;
+  //   .bookmarks-btn {
+  //     padding: 1rem;
+  //     border-radius: 0.5rem;
+  //     border: none;
+  //     display: flex;
+  //     align-items: center;
+  //     justify-content: center;
+  //     gap: 0.5rem;
+  //     font-size: 1.2rem;
+  //     font-weight: 600;
+  //     background-color: #fff;
+  //     cursor: pointer;
+  //   }
+  //   .notification {
+  //     position: absolute;
+  //     top: -5px;
+  //     right: 9px;
+  //     background-color: #ffe09b;
+  //     height: 2.5rem;
+  //     width: 2.5rem;
+  //     border-radius: 50%;
+  //     display: flex;
+  //     align-items: center;
+  //     justify-content: center;
+  //     text-align: center;
+  //     color: #000;
+  //     font-weight: 600;
+  //   }
+  // }
+}
 
-  .left-side {
-    grid-row: 2 /3;
+// .left-side {
+//   grid-row: 2 /3;
 
-    display: grid;
-    grid-template-rows: 7rem 1fr 7rem;
+//   display: grid;
+//   grid-template-rows: 7rem 1fr 7rem;
 
-    @media only screen and (max-width: 53.1rem) {
-      height: fit-content;
-      width: 100%;
-    }
-  }
+//   @media only screen and (max-width: 53.1rem) {
+//     height: fit-content;
+//     width: 100%;
+//   }
+// }
 
-  .right-side {
-    grid-row: 2 /3;
+// .right-side {
+//   grid-row: 2 /3;
 
-    @media only screen and (max-width: 53.1rem) {
-      grid-row: 3/4;
-      width: 100%;
-    }
-  }
+//   @media only screen and (max-width: 53.1rem) {
+//     grid-row: 3/4;
+//     width: 100%;
+//   }
+// }
+// }
+
+.main {
+  width: 100%;
 }
