--- a/src/scss/CommentCard.scss
+++ b/src/scss/CommentCard.scss
@@ -5,6 +5,13 @@
   background-color: #fff;
   padding: 0.5rem;
   border-radius: 0.3rem;
+
+  @media only screen and (max-width: 50rem) {
+    min-width: 15rem;
+  }
+  @media only screen and (max-width: 35rem) {
+    min-width: 10rem;
+  }
 }
 
 .comment-card-content {
