--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -4,6 +4,11 @@
   width: 100%;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
+
+  @media only screen and (max-width: 53.1rem) {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+  }
 }
 .home-left-side {
   display: grid;
@@ -13,12 +18,17 @@
   @media only screen and (max-width: 53.1rem) {
     height: fit-content;
     width: 100%;
+    grid-column: 1/-1;
+    grid-row: 1/2;
   }
 }
 .home-right-side {
   grid-column: 2/3;
   @media only screen and (max-width: 53.1rem) {
-    grid-row: 3/4;
-    width: 100%;
+    @media only screen and (max-width: 53.1rem) {
+      grid-row: 2/3;
+      grid-column: 1/-1;
+      width: 100%;
+    }
   }
 }
